--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,17 +3,16 @@ Type: Package
 Title: Several Examined and Concealed States-Dependent Speciation and
  Extinction
 Version: 2.0.0
-Date: 2019-04-26
+Date: 2019-06-22
 License: GPL-3
 Authors@R: c(
  person("Leonel", "Herrera Alsina", email = "leonelhalsina@gmail.com", role = "cre"),
  person("Paul", "van Els", email = "paulvanels@gmail.com", role = "aut"),
  person("Rampal", "Etienne", email = "r.s.etienne@rug.nl", role = "aut"))
-Description: Combines the features of HiSSE and MuSSE to
- simultaneously infer state-dependent diversification across
- two or more traits or states while accounting for the role
- of a possible concealed trait. See Herrera-Alsina et al.
- Systematic Biology, in press <DOI:10.1093/sysbio/syy057>.  
+Description: Simultaneously infers state-dependent diversification across
+ two or more states of a single or multiple traits while accounting for the
+ role of a possible concealed trait. See Herrera-Alsina et al. 2019
+ Systematic Biology 68: 317-328 <DOI:10.1093/sysbio/syy057>.  
 Depends: R (>= 3.5.0)
 Imports: utils,
  DDD (>= 4.0),
