--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
   - sudo add-apt-repository -y ppa:opencpu/imagemagick
   - sudo apt-get update
   - sudo apt-get install -y libmagick++-dev
+  - sudo apt-get install -y fftw2 fftw-dev
+  - sudo apt-get install -y libgsl-dev
 
 after_success:
   - Rscript -e "lintr::lint_package()"
