--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(cla_id_paramPos)
 export(cla_secsse_loglik)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
+export(event_times)
 export(id_paramPos)
 export(prepare_full_lambdas)
 export(q_doubletrans)
