--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(secsse_loglik)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
 export(sortingtraits)
+importFrom(doMC,registerDoMC)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
