--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -91,7 +91,7 @@ jobs:
         shell: bash
 
       - name: Install covr and test coverage
-        if: matrix.config.r == 'devel'
+        if: runner.os == 'Windows'
         run: |
           remotes::install_cran("covr", dependencies = TRUE, upgrade = "always")
           covr::codecov()
