--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,19 @@ Version: 2.0.7
 Date: 2021-02-10
 License: GPL-3
 Authors@R: c(
- person("Leonel", "Herrera Alsina", email = "leonelhalsina@gmail.com", role = "cre"),
- person("Paul", "van Els", email = "paulvanels@gmail.com", role = "aut"),
- person("Rampal", "Etienne", email = "r.s.etienne@rug.nl", role = "aut"))
+ person(given = "Leonel",
+        family = "Herrera Alsina",
+        email = "leonelhalsina@gmail.com",
+        role = "aut"),
+ person(given = "Paul",
+        family = "van Els",
+        email = "paulvanels@gmail.com",
+        role = "aut"),
+ person(given = "Rampal S.",
+        family = "Etienne",
+        email = "r.s.etienne@rug.nl",
+        role = c("cre","aut"),
+        comment = c(ORCID = "0000-0003-2142-7612")))
 Description: Simultaneously infers state-dependent diversification across
  two or more states of a single or multiple traits while accounting for the
  role of a possible concealed trait. See Herrera-Alsina et al. 2019
