--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(cla_id_paramPos)
 export(cla_secsse_loglik)
+export(cla_secsse_loglik_cpp)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
 export(event_times)
@@ -9,10 +10,10 @@ export(id_paramPos)
 export(prepare_full_lambdas)
 export(q_doubletrans)
 export(secsse_loglik)
+export(secsse_loglik_cpp)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
 export(sortingtraits)
-importFrom(doParallel,registerDoParallel)
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
-useDynLib(secsse)
+import(Rcpp)
+importFrom(RcppParallel, RcppParallelLibs)
+useDynLib(secsseCPP, .registration = TRUE)
