--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cla_secsse_loglik)
 export(cla_secsse_loglik_cpp)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
+export(ct_condition)
 export(event_times)
 export(id_paramPos)
 export(prepare_full_lambdas)
@@ -18,4 +19,8 @@ export(secsse_ml_func_def_pars)
 export(sortingtraits)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
+importFrom(doParallel,registerDoParallel)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
+useDynLib(secsse)
 useDynLib(secsseCPP, .registration = TRUE)
