--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -7,12 +7,14 @@ on:
       - master
       - develop
       - fix_coverage
+      - thijs
 
   pull_request:
     branches:
       - main
       - master
       - develop
+      - thijs
 
 name: R-CMD-check
 
