--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -6,13 +6,14 @@ on:
       - main
       - master
       - develop
-      - fix_coverage
+      - hp_fortran
 
   pull_request:
     branches:
       - main
       - master
       - develop
+      - hp_fortan
 
 name: R-CMD-check
 
@@ -71,7 +72,6 @@ jobs:
           do
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
-
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
