--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(q_doubletrans)
 export(secsse_loglik)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
+export(secsse_sim)
 export(sortingtraits)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
