--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(id_paramPos)
 export(prepare_full_lambdas)
 export(q_doubletrans)
 export(secsse_loglik)
+export(secsse_loglik_timezones)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
 export(sortingtraits)
