add multiple timezones

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(prepare_full_lambdas)
 export(q_doubletrans)
 export(secsse_loglik)
 export(secsse_loglik_timezones)
+export(secsse_loglik_timezones_compound)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
 export(sortingtraits)
