--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cla_secsse_loglik)
 export(cla_secsse_loglik_timezones)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
+export(cla_secsse_timezones_ml)
 export(event_times)
 export(id_paramPos)
 export(prepare_full_lambdas)
@@ -13,6 +14,7 @@ export(secsse_loglik)
 export(secsse_loglik_timezones)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
+export(secsse_timezones_ml)
 export(sortingtraits)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
