--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,8 @@ export(q_doubletrans)
 export(secsse_loglik)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
-export(secsse_sim)
+export(secsse_sim_R)
+export(secsse_sim_cpp)
 export(sortingtraits)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
