--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(cla_id_paramPos)
 export(cla_secsse_loglik)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
-export(cla_secsse_sim)
 export(event_times)
 export(id_paramPos)
 export(prepare_full_lambdas)
@@ -13,6 +12,8 @@ export(secsse_loglik)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
 export(secsse_sim_R)
+export(secsse_sim_cond)
+export(secsse_sim_cond_cpp)
 export(secsse_sim_cpp)
 export(sortingtraits)
 import(Rcpp)
