fix ggplot deprecation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,4 +21,5 @@ export(secsse_sim)
 export(sortingtraits)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
+importFrom(rlang,.data)
 useDynLib(secsse, .registration = TRUE)
