fix rlang dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     Rcpp,
     RcppParallel,
     ggplot2,
-    tibble
+    tibble,
+    rlang
 Suggests: diversitree,
  phytools,
  testthat,
