--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,6 +45,7 @@ Suggests: diversitree,
  knitr,
  rmarkdown
 NeedsCompilation: yes
+SystemRequirements: C++17
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
