Hanno Hildenbrandt is contributor
Add ORCIDs, format DESCRIPTION, add URLs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,15 +9,23 @@ Authors@R: c(
  person(given = "Leonel",
         family = "Herrera Alsina",
         email = "leonelhalsina@gmail.com",
-        role = "aut"),
+        role = "aut",
+        comment = c(ORCID = "0000-0003-0474-3592")),
  person(given = "Paul",
         family = "van Els",
         email = "paulvanels@gmail.com",
-        role = "aut"),
+        role = "aut",
+        comment = c(ORCID = "0000-0002-9499-8873")),
  person(given = "Thijs",
         family = "Janzen",
         email = "t.janzen@rug.nl",
-        role = "ctb"),
+        role = "ctb",
+        comment = c(ORCID = "0000-0002-4162-1140")),
+ person(given = "Hanno",
+        family = "Hildenbrandt",
+        email = "h.hildenbrandt@rug.nl",
+        role = "ctb",
+        comment = c(ORCID = "0000-0002-6784-1037")),
  person(given = "Rampal S.",
         family = "Etienne",
         email = "r.s.etienne@rug.nl",
@@ -25,32 +33,35 @@ Authors@R: c(
         comment = c(ORCID = "0000-0003-2142-7612")))
 Description: Simultaneously infers state-dependent diversification across
  two or more states of a single or multiple traits while accounting for the
- role of a possible concealed trait. See Herrera-Alsina et al. 2019
- Systematic Biology 68: 317-328 <DOI:10.1093/sysbio/syy057>.  
-Depends: R (>= 3.5.0)
+ role of a possible concealed trait. See Herrera-Alsina et al. (2019)
+ <doi:10.1093/sysbio/syy057>.  
+Depends: R (>= 4.2.0)
 Imports: 
-    utils,
-    DDD (>= 4.0),
-    ape,
-    geiger,
-    Rcpp,
-    RcppParallel,
-    ggplot2,
-    tibble,
-    rlang
-Suggests: diversitree,
+ utils,
+ DDD (>= 5.0),
+ ape,
+ geiger,
+ Rcpp (>= 1.0.10),
+ RcppParallel,
+ ggplot2,
+ tibble,
+ rlang
+Suggests: 
+ diversitree,
  phytools,
  testthat,
  testit,
  knitr,
  rmarkdown
+LinkingTo: 
+ Rcpp,
+ RcppParallel,
+ BH (>= 1.81.0-1)
 NeedsCompilation: yes
 SystemRequirements: C++17
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/rsetienne/secsse
+BugReports: https://github.com/rsetienne/secsse/issues
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
-LinkingTo: 
-    Rcpp,
-    RcppParallel,
-    BH
