add create lambda matrices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(cla_secsse_eval)
 export(cla_secsse_loglik)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
+export(create_lambda_matrices)
+export(create_transition_matrix)
 export(event_times)
 export(id_paramPos)
 export(plot_state_exact)
