--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,13 @@ export(cla_secsse_eval)
 export(cla_secsse_loglik)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
+export(create_default_q_list)
+export(create_default_transition_list)
 export(create_lambda_matrices)
+export(create_mus)
 export(create_transition_matrix)
 export(event_times)
+export(fill_in)
 export(id_paramPos)
 export(plot_state_exact)
 export(plot_state_exact_cla)
