fix conditioning secsse_sim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(create_lambda_matrices)
 export(create_mus)
 export(create_transition_matrix)
 export(event_times)
+export(extract_par_vals)
 export(fill_in)
 export(id_paramPos)
 export(plot_state_exact)
