--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,6 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
-
-
     {
       "name": "(gbd) devtools::test()",
       "type": "cppdbg",
@@ -80,6 +77,36 @@
         "--vanilla",
         "-e",
         "devtools::load_all(); source('${workspaceFolder}/test_hanno.R')"
+      ],
+      "stopAtEntry": false,
+      // needs to be generated, see below
+      "envFile": "${workspaceFolder}/.vscode/.env",
+      "cwd": "${workspaceFolder}",
+      "externalConsole": false,
+      "MIMode": "gdb",
+      //"miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+       ],
+      // 'R' is a script that sets a ton of environment variables
+      // required by the R binary. This task emulates that part of
+      // the R script:
+      "preLaunchTask": "genenv"
+    },
+    {
+      "name": "(gbd) secsse_acc.R",
+      "type": "cppdbg",
+      "request": "launch",
+      // The binary, not the script
+      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
+      "args": [
+        "--vanilla",
+        "-e",
+        "devtools::load_all(); source('${workspaceFolder}/secsse_acc.R')"
       ],
       "stopAtEntry": false,
       // needs to be generated, see below
