--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: secsse
 Type: Package
 Title: Several Examined and Concealed States-Dependent Speciation and
  Extinction
-Version: 2.5.0
-Date: 2023-04-28
+Version: 2.6.0
+Date: 2023-06-27
 License: GPL (>= 3) | file LICENSE
 Authors@R: c(
  person(given = "Leonel",
@@ -26,6 +26,11 @@ Authors@R: c(
         email = "h.hildenbrandt@rug.nl",
         role = "ctb",
         comment = c(ORCID = "0000-0002-6784-1037")),
+ person(given = "Pedro",
+        family = "Santos Neves",
+        email = "p.m.santos.neves@rug.nl",
+        role = "ctb",
+        comment = c(ORCID = "0000-0003-2561-4677")),
  person(given = "Rampal S.",
         family = "Etienne",
         email = "r.s.etienne@rug.nl",
