--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ export(cla_secsse_eval)
 export(cla_secsse_loglik)
 export(cla_secsse_ml)
 export(cla_secsse_ml_func_def_pars)
-export(create_default_lambda_list)
-export(create_default_q_list)
-export(create_lambda_matrices)
+export(create_default_lambda_transition_matrix)
+export(create_default_shift_matrix)
+export(create_lambda_list)
 export(create_mus)
 export(create_transition_matrix)
 export(event_times)
