renaming prep functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ export(cla_secsse_ml_func_def_pars)
 export(create_default_lambda_transition_matrix)
 export(create_default_shift_matrix)
 export(create_lambda_list)
-export(create_mus)
-export(create_transition_matrix)
+export(create_mu_vector)
+export(create_q_matrix)
 export(event_times)
 export(expand_q_matrix)
 export(extract_par_vals)
