--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
       "name": "(gbd) devtools::test()",
       "type": "cppdbg",
@@ -68,7 +69,7 @@
       "preLaunchTask": "genenv"
     },
     {
-      "name": "(gbd) test_hanno.R",
+      "name": "(gbd) acc",
       "type": "cppdbg",
       "request": "launch",
       // The binary, not the script
@@ -76,7 +77,7 @@
       "args": [
         "--vanilla",
         "-e",
-        "devtools::load_all(); source('${workspaceFolder}/test_hanno.R')"
+        "devtools::load_all(); source('${workspaceFolder}/secsse_acc.R')"
       ],
       "stopAtEntry": false,
       // needs to be generated, see below
@@ -98,7 +99,7 @@
       "preLaunchTask": "genenv"
     },
     {
-      "name": "(gbd) secsse_acc.R",
+      "name": "(gbd) cla",
       "type": "cppdbg",
       "request": "launch",
       // The binary, not the script
@@ -106,7 +107,37 @@
       "args": [
         "--vanilla",
         "-e",
-        "devtools::load_all(); source('${workspaceFolder}/secsse_acc.R')"
+        "devtools::load_all(); source('${workspaceFolder}/secsse_cla.R')"
+      ],
+      "stopAtEntry": false,
+      // needs to be generated, see below
+      "envFile": "${workspaceFolder}/.vscode/.env",
+      "cwd": "${workspaceFolder}",
+      "externalConsole": false,
+      "MIMode": "gdb",
+      //"miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+       ],
+      // 'R' is a script that sets a ton of environment variables
+      // required by the R binary. This task emulates that part of
+      // the R script:
+      "preLaunchTask": "genenv"
+    },
+    {
+      "name": "(gbd) store",
+      "type": "cppdbg",
+      "request": "launch",
+      // The binary, not the script
+      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
+      "args": [
+        "--vanilla",
+        "-e",
+        "devtools::load_all(); source('${workspaceFolder}/secsse_store.R')"
       ],
       "stopAtEntry": false,
       // needs to be generated, see below
