--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(create_default_shift_matrix)
 export(create_lambda_list)
 export(create_mu_vector)
 export(create_q_matrix)
+export(default_params_doc)
 export(event_times)
 export(expand_q_matrix)
 export(extract_par_vals)
