--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
   "version": "0.2.0",
   "configurations": [
 
+
     {
       "name": "(gbd) devtools::test()",
       "type": "cppdbg",
@@ -138,6 +139,36 @@
         "--vanilla",
         "-e",
         "devtools::load_all(); source('${workspaceFolder}/secsse_store.R')"
+      ],
+      "stopAtEntry": false,
+      // needs to be generated, see below
+      "envFile": "${workspaceFolder}/.vscode/.env",
+      "cwd": "${workspaceFolder}",
+      "externalConsole": false,
+      "MIMode": "gdb",
+      //"miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+       ],
+      // 'R' is a script that sets a ton of environment variables
+      // required by the R binary. This task emulates that part of
+      // the R script:
+      "preLaunchTask": "genenv"
+    },
+    {
+      "name": "(gbd) sim",
+      "type": "cppdbg",
+      "request": "launch",
+      // The binary, not the script
+      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
+      "args": [
+        "--vanilla",
+        "-e",
+        "devtools::load_all(); source('${workspaceFolder}/secsse_sim.R')"
       ],
       "stopAtEntry": false,
       // needs to be generated, see below
