--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,7 +3,6 @@
 ^README\.md
 ^\.github$
 ^LICENSE\.md$
-^pics$
 ^doc$
 ^Meta$
 ^\.vscode$
@@ -11,3 +10,4 @@
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
+^vignettes/secsse_performance\.Rmd$
