--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,13 +7,12 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
     {
-      "name": "(gbd) devtools::test()",
+      "name": "(Linux gbd) devtools::test()",
       "type": "cppdbg",
       "request": "launch",
       // The binary, not the script
-      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
+      "program": "/Library/Frameworks/R.framework/Versions/4.3-arm64/Resources/bin/exec/R",
       "args": [
         "--vanilla",
         "-e",
@@ -24,11 +23,10 @@
       "envFile": "${workspaceFolder}/.vscode/.env",
       "cwd": "${workspaceFolder}",
       "externalConsole": false,
-      "MIMode": "gdb",
-      //"miDebuggerPath": "/usr/bin/gdb",
+      "MIMode": "lldb",
       "setupCommands": [
         {
-          "description": "Enable pretty-printing for gdb",
+          "description": "Enable pretty-printing for lldb",
           "text": "-enable-pretty-printing",
           "ignoreFailures": true
         }
@@ -43,7 +41,7 @@
       "type": "cppdbg",
       "request": "launch",
       // The binary, not the script
-      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
+      "program": "/Library/Frameworks/R.framework/Versions/4.3-arm64/Resources/bin/exec/R",
       "args": [
         "--vanilla",
         "-e",
@@ -54,97 +52,7 @@
       "envFile": "${workspaceFolder}/.vscode/.env",
       "cwd": "${workspaceFolder}",
       "externalConsole": false,
-      "MIMode": "gdb",
-      //"miDebuggerPath": "/usr/bin/gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-       ],
-      // 'R' is a script that sets a ton of environment variables
-      // required by the R binary. This task emulates that part of
-      // the R script:
-      "preLaunchTask": "genenv"
-    },
-    {
-      "name": "(gbd) acc",
-      "type": "cppdbg",
-      "request": "launch",
-      // The binary, not the script
-      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
-      "args": [
-        "--vanilla",
-        "-e",
-        "devtools::load_all(); source('${workspaceFolder}/secsse_acc.R')"
-      ],
-      "stopAtEntry": false,
-      // needs to be generated, see below
-      "envFile": "${workspaceFolder}/.vscode/.env",
-      "cwd": "${workspaceFolder}",
-      "externalConsole": false,
-      "MIMode": "gdb",
-      //"miDebuggerPath": "/usr/bin/gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-       ],
-      // 'R' is a script that sets a ton of environment variables
-      // required by the R binary. This task emulates that part of
-      // the R script:
-      "preLaunchTask": "genenv"
-    },
-    {
-      "name": "(gbd) cla",
-      "type": "cppdbg",
-      "request": "launch",
-      // The binary, not the script
-      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
-      "args": [
-        "--vanilla",
-        "-e",
-        "devtools::load_all(); source('${workspaceFolder}/secsse_cla.R')"
-      ],
-      "stopAtEntry": false,
-      // needs to be generated, see below
-      "envFile": "${workspaceFolder}/.vscode/.env",
-      "cwd": "${workspaceFolder}",
-      "externalConsole": false,
-      "MIMode": "gdb",
-      //"miDebuggerPath": "/usr/bin/gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-       ],
-      // 'R' is a script that sets a ton of environment variables
-      // required by the R binary. This task emulates that part of
-      // the R script:
-      "preLaunchTask": "genenv"
-    },
-    {
-      "name": "(gbd) store",
-      "type": "cppdbg",
-      "request": "launch",
-      // The binary, not the script
-      "program": "${env:HOME}/opt/bin/Rroot/lib/R/bin/exec/R",
-      "args": [
-        "--vanilla",
-        "-e",
-        "devtools::load_all(); source('${workspaceFolder}/secsse_store.R')"
-      ],
-      "stopAtEntry": false,
-      // needs to be generated, see below
-      "envFile": "${workspaceFolder}/.vscode/.env",
-      "cwd": "${workspaceFolder}",
-      "externalConsole": false,
-      "MIMode": "gdb",
+      "MIMode": "lldb",
       //"miDebuggerPath": "/usr/bin/gdb",
       "setupCommands": [
         {
