--- a/.github/workflows/cpp_lint.yml
+++ b/.github/workflows/cpp_lint.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
       - run: pip install cpplint
-      - run: cpplint --quiet --exclude="src/RcppExports.cpp" src/*.cpp src/*.h
+      - run: cpplint --quiet --exclude="src/RcppExports.cpp, src/secsse_rhs.h, src/secsse_loglik.h, src/secsse_eval.cpp" src/*.cpp src/*.h
 
   cppcheck:
     runs-on: ubuntu-latest
