--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(expand_q_matrix)
 export(extract_par_vals)
 export(fill_in)
 export(id_paramPos)
+export(plot_idparslist)
 export(plot_state_exact)
 export(prepare_full_lambdas)
 export(q_doubletrans)
