initial single branch attempt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(secsse_loglik_eval)
 export(secsse_ml)
 export(secsse_ml_func_def_pars)
 export(secsse_sim)
+export(secsse_single_branch_loglik)
 export(sortingtraits)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
