add test logliks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(secsse_ml_func_def_pars)
 export(secsse_sim)
 export(secsse_single_branch_loglik)
 export(sortingtraits)
+export(test_loglik)
+export(test_multi_loglik)
 import(Rcpp)
 importFrom(RcppParallel, RcppParallelLibs)
 importFrom(rlang,.data)
